Fixed View Schedule
Fixed Teacher Dashboard and Admin

--- a/DMS1/DMS1.vbproj
+++ b/DMS1/DMS1.vbproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=8.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.8.0.1\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Pipelines, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.Pipelines.5.0.2\lib\net461\System.IO.Pipelines.dll</HintPath>
@@ -161,12 +162,6 @@
       <DependentUpon>frmLoadData.vb</DependentUpon>
     </Compile>
     <Compile Include="frmLoadData.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmManageRoomSchedule.Designer.vb">
-      <DependentUpon>frmManageRoomSchedule.vb</DependentUpon>
-    </Compile>
-    <Compile Include="frmManageRoomSchedule.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmManageSchedule.Designer.vb">
@@ -284,9 +279,6 @@
     <EmbeddedResource Include="frmLoadData.resx">
       <DependentUpon>frmLoadData.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmManageRoomSchedule.resx">
-      <DependentUpon>frmManageRoomSchedule.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="frmManageSchedule.resx">
       <DependentUpon>frmManageSchedule.vb</DependentUpon>
     </EmbeddedResource>
@@ -355,6 +347,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\teacher_11256757.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logout.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
